logs/Slang/generated/hdlconv/hdlconvertor_p221.sv.log
name: hdlconvertor_p221
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p221.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p221.sv:1:1: error: language feature not yet supported
sequence abc;
^~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p221.sv:4:1: error: language feature not yet supported
sequence de;
^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p221.sv:9:1: error: language feature not yet supported
wait( abc.triggered || de.triggered );
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
